<resources>
    <string name="facebook_app_id">325917951595657</string>
    <string name="fb_login_protocol_scheme">fb325917951595657</string>
    <string name="app_name">Ggstore</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login_name">登入名稱</string>
    <string name="login_password">登錄密碼</string>
    <string name="forget_password">忘記密碼</string>
    <string name="permission_pass">權限通過</string>
    <string name="permission_no_pass">權限沒通過,請接收權限</string>
    <string name="new_product">最新產品</string>
    <string name="today_discount">今期優惠</string>
    <string name="gravida_mother">孕婦及媽媽</string>
    <string name="bady_children">嬰幼兒</string>
    <string name="toy_education">玩具教育</string>
    <string name="all_product">所有產品</string>
    <string name="brand">品牌</string>
    <string name="order">訂單</string>
    <string name="menu_search">搜索</string>
    <string name="search_hint">輸入貨品名稱或品牌</string>
    <string name="copy_success">復製成功</string>
    <string name="state_network_error">網絡發生錯誤</string>
    <string name="state_loading">正在加載中</string>
    <string name="state_not_more">沒有更多</string>
    <string name="state_refreshing">刷新中</string>
    <string name="state_load_error">加載錯誤</string>
    <string name="login">登錄</string>
    <string name="login_xml">登&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;入</string>
    <string name="api_lang">1</string>
    <string name="forget_password_details">請輸入資料重設密碼</string>
    <string name="email">電郵地址</string>
    <string name="register">註冊</string>
    <string name="register_xml">註&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;冊</string>
    <string name="register_title">使用條例及免責聲明</string>
    <string name="register_details"> 需要HTML拼接起来
    </string>
    <string name="register_bottom">
        本人同意接受以上條款並願意接受任何Googoogaga的溝通訊息包括Googoogaga的資訊及講座、培訓等服務及活動的最新消息與推廣。
    </string>
    <string name="agree">同意並繼續</string>
    <string name="disagree">不同意</string>
    <string name="register_detail_content">
        歡迎您申請成為 Googoogaga 兒童發展及教育資訊網會員！成為會員可參與本網活動和享受優惠。
您所提供的資料將用作參與本網各項活動時核對身份之用，敬請新用戶提供準確資料，謝謝！
    </string>
    <string name="sir">先生</string>
    <string name="lady">女士</string>
    <string name="gender">稱謂</string>
    <string name="birth">出生日期</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="have_child">你有孩子嗎?</string>
    <string name="have">有</string>
    <string name="having">懷孕中</string>
    <string name="no">沒有</string>
    <string name="create_my_account">創建我的帳戶</string>
    <string name="education_toy">教育玩具</string>
    <string name="book">圖書</string>
    <string name="baby_toy">嬰兒玩具</string>
    <string name="shop_cart">購物車</string>
    <string name="empty_cart">你的購物車是空的</string>
    <string name="shop_cart_discount">*購物滿HK$300(優惠後)，即可以享有免費送貨服務</string>
    <string name="go_shopping">繼續購物</string>
    <string name="pay">結賬</string>
    <string name="cancel">取消</string>
    <string name="go">繼續</string>
    <string name="cargo_data">送貨資料</string>
    <string name="delivery_way">送貨方式</string>
    <string name="delivery_way_detail">快遞 (暫時只提供香港運送服務) \n運費 HK$50, 購物滿HK$300(優惠後)即可以享有免費 送貨服務</string>
    <string name="receiver_data">收貨人資料</string>
    <string name="first_name">姓氏</string>
    <string name="last_name">名字</string>
    <string name="phone">電話</string>
    <string name="area">區域</string>
    <string name="back">返回</string>
    <string name="submit">提交</string>
    <string name="shop_terms">購物條款</string>
    <string name="go_paypal">發送到paypal</string>
    <string name="my_order">我的訂單</string>
    <string name="shoping_list">購物清單</string>
    <string name="back_home">返回主頁</string>
    <string name="thinks">謝謝惠顧!</string>
    <string name="thinks_details">&#160;&#160;&#160;&#160;感謝您於Googoogaga Online  Store購物，我們會盡快將您訂購 的貨品送到指到地點。\n\n\n   &#160;&#160;&#160;&#160;這是您這次購物的訂單編號：</string>
    <string name="order_number">訂單編號</string>
    <string name="goods">貨品</string>
    <string name="order_state">訂單狀態</string>
    <string name="order_state_details">%s\n  %s送出</string>
    <string name="order_details">訂單詳情</string>
    <string name="product_number">產品編號 : %s</string>
    <string name="product_number_sum">數量 : %d</string>
    <string name="product_price">HK$%s</string>
    <string name="product_price_detail">價錢 : HK$%d</string>
    <string name="product_price_sum">小計 : HK$%d</string>
    <string name="freight">運費 : HK$%d</string>
    <string name="total_price">總計 : HK$%d</string>
    <string name="set_password">設置密碼</string>
    <string name="confirm_password">確認密碼</string>
    <string name="name">姓名</string>
    <string name="contact_phone">聯絡電話</string>
    <string name="postal_address">通訊地址</string>
    <string name="hongkong">香港</string>
    <string name="frist_name_empty">姓氏請填寫</string>
    <string name="last_name_empty">請填寫名字</string>
    <string name="phone_empty">請填寫電話</string>
    <string name="area_empty">請填寫地區</string>
    <string name="phone_error">填寫的電話格式不對</string>
    <string name="product_details">貨品詳情</string>
    <string name="product">貨品</string>
    <string name="number">數量</string>
    <string name="subtotal">小計</string>
    <string name="pay_date">付款日期</string>
    <string name="unit_price">單價</string>
    <string name="reset_password">重 設 密 碼</string>
    <string name="input_email">請輸入妳的郵箱地址</string>
    <string name="input_email_error">郵箱格式錯誤</string>
    <string name="input_login_name">請輸入妳的登錄名</string>
    <string name="input_password">請輸入妳的密碼</string>
    <string name="input_password_length_error">密碼不能少於8位</string>
    <string name="input_confirm_password">請輸入確認密碼</string>
    <string name="input_confirm_password_error">兩次設置密碼不壹致</string>
    <string name="input_name">請輸入妳的姓名</string>
    <string name="input_tel">請輸入妳的電話號碼</string>
    <string name="input_tel_error">電話號碼輸入有誤</string>
    <string name="input_address">請輸入妳的地址</string>
    <string name="network_error">網絡出錯</string>
    <string name="register_fail">註冊失敗</string>
    <string name="product_limit">數量超出庫存限制</string>
    <string name="not_install_application_market">妳的手機未安裝應用市場</string>
    <string name="have_not_webview">Not WebView for you phone</string>
    <string name="delete_product">貨品已被除去</string>
    <string name="add_product_to_shopcart">貨品已被添加到購物車</string>
    <string name="add_shopcart_error">添加到購物車失敗</string>
    <string name="order_number_empty">訂單號為空</string>
    <string name="network_fail">網絡請求失敗</string>
    <string name="add_order_number_error">添加訂單號出錯</string>
    <string name="login_out">己登出</string>
    <string name="start_brand_activity_error">打開品牌頁面出錯</string>
    <string name="product_list_empty">產品清單列表為空</string>
    <string name="create_order_number_fail">創建訂單號失敗</string>
    <string name="parser_data_error">數據解析失敗</string>
    <string name="facebook_login_success">facebook登入成功</string>
    <string name="facebook_login_cancel">facebook登入取消</string>
    <string name="facebook_login_error">facebook登入錯誤</string>
    <string name="input_name_or_password_is_empty">請輸入用戶名或者密碼</string>
    <string name="input_name_or_password_error">輸入用戶名或者密碼錯誤</string>
    <string name="product_bean_empty">產品詳情為空</string>
    <string name="paypal_success">paypal付款成功</string>
    <string name="mailbox_look_password">新密碼已發送到妳的郵箱,請查看</string>
    <string name="mailbox_look_password_error">設置失敗</string>
</resources>