<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="@dimen/lay_15"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:text="@string/register_detail_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginTop="@dimen/lay_10"
        android:textColor="@color/bg"
        android:text="@string/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_marginTop="@dimen/lay_5"
        android:background="@drawable/et_selector"
        android:layout_width="match_parent"
        android:layout_height="@dimen/lay_30" />
    <TextView
        android:layout_marginTop="@dimen/lay_10"
        android:textColor="@color/bg"
        android:text="@string/login_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_marginTop="@dimen/lay_5"
        android:background="@drawable/et_selector"
        android:layout_width="match_parent"
        android:layout_height="@dimen/lay_30" />
    <TextView
        android:layout_marginTop="@dimen/lay_10"
        android:text="@string/gender"
        android:textColor="@color/bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_marginTop="@dimen/lay_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:padding="@dimen/lay_10"
            android:id="@+id/activity_register_detail_sir"
            android:background="@color/bg"
            android:text="@string/sir"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:padding="@dimen/lay_10"
            android:id="@+id/activity_register_detail_lady"
            android:layout_marginLeft="@dimen/lay_20"
            android:text="@string/lady"
            android:background="@color/white"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
        android:layout_marginTop="@dimen/lay_10"
        android:text="@string/birth"
        android:textColor="@color/bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_marginTop="@dimen/lay_5"
        android:layout_width="match_parent"
        android:layout_height="@dimen/lay_40">
        <Spinner
            android:id="@+id/activity_register_detail_year"
            android:gravity="center"
            android:text="@string/year"
            android:padding="@dimen/lay_10"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <Spinner
            android:id="@+id/activity_register_detail_month"
            android:padding="@dimen/lay_10"
            android:gravity="center"
            android:layout_marginLeft="@dimen/lay_20"
            android:text="@string/month"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <Spinner
            android:id="@+id/activity_register_detail_day"
            android:padding="@dimen/lay_10"
            android:gravity="center"
            android:layout_marginLeft="@dimen/lay_20"
            android:text="@string/day"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>
    <TextView
        android:layout_marginTop="@dimen/lay_10"
        android:text="@string/have_child"
        android:textColor="@color/bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_marginTop="@dimen/lay_5"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:padding="@dimen/lay_10"
            android:id="@+id/activity_register_detail_bady_haved"
            android:background="@color/bg"
            android:text="@string/have"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:padding="@dimen/lay_10"
            android:id="@+id/activity_register_detail_bady_having"
            android:layout_marginLeft="@dimen/lay_20"
            android:text="@string/having"
            android:gravity="center"
            android:background="@color/white"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:padding="@dimen/lay_10"
            android:id="@+id/activity_register_detail_bady_no"
            android:layout_marginLeft="@dimen/lay_20"
            android:text="@string/no"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:textSize="@dimen/font_25"
        android:layout_marginTop="@dimen/lay_50"
        android:text="@string/create_my_account"
        android:padding="@dimen/lay_5"
        android:background="@drawable/gray_bg"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>