<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery_way" />

        <TextView
            android:text="@string/delivery_way_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/receiver_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="@dimen/lay_50"
            android:textColor="@color/bg"
            android:text="@string/first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_name"
            android:background="@color/yellow"
            android:layout_width="match_parent"
            android:textColorHint="@color/gray"
            android:padding="@dimen/lay_10"
            android:layout_height="@dimen/lay_40" />
        <TextView
            android:layout_marginTop="@dimen/lay_20"
            android:textColor="@color/bg"
            android:text="@string/last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_email"
            android:background="@color/yellow"
            android:layout_width="match_parent"
            android:textColorHint="@color/gray"
            android:padding="@dimen/lay_10"
            android:layout_height="@dimen/lay_40" />

        <TextView
            android:layout_marginTop="@dimen/lay_50"
            android:textColor="@color/bg"
            android:text="@string/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_phone"
            android:background="@color/yellow"
            android:layout_width="match_parent"
            android:textColorHint="@color/gray"
            android:padding="@dimen/lay_10"
            android:layout_height="@dimen/lay_40" />
        <TextView
            android:layout_marginTop="@dimen/lay_20"
            android:textColor="@color/bg"
            android:text="@string/area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_area"
            android:background="@color/yellow"
            android:layout_width="match_parent"
            android:textColorHint="@color/gray"
            android:padding="@dimen/lay_10"
            android:layout_height="@dimen/lay_40" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/back"
                android:layout_weight="1"
                android:background="@color/bg"
                android:layout_margin="@dimen/lay_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/submit"
                android:layout_weight="1"
                android:background="@color/bg"
                android:layout_margin="@dimen/lay_20"
                android:text="@string/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>