<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/lay_5">

    <!--<ImageView-->
    <!--android:id="@+id/imageView"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:contentDescription="@string/nav_header_desc"-->
    <!--android:paddingTop="@dimen/nav_header_vertical_spacing"-->
    <!--app:srcCompat="@mipmap/ic_launcher_round" />-->

    <TextView
        android:id="@+id/activity_main_header_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle" />

</LinearLayout>
