<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/lay_10"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_weight="3"
        android:paddingLeft="@dimen/lay_10"
        android:text="@string/order_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_weight="4"
        android:paddingLeft="@dimen/lay_10"
        android:text="@string/goods"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_weight="5"
        android:paddingLeft="@dimen/lay_10"
        android:text="@string/order_state"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />
    </LinearLayout>
    <FrameLayout
        android:id="@+id/fragment_myorder_content"
        android:layout_above="@id/price"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>