<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_forget_password"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/lay_30"
    android:layout_height="match_parent">
    <TextView
        android:textColor="@color/gray"
        android:text="@string/forget_password_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginTop="@dimen/lay_50"
        android:textColor="@color/bg"
        android:text="@string/login_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:background="@drawable/et_selector"
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:textColorHint="@color/gray"
        android:padding="@dimen/lay_10"
        android:maxLines="1"
        android:layout_height="@dimen/lay_40" />
    <TextView
        android:layout_marginTop="@dimen/lay_20"
        android:textColor="@color/bg"
        android:text="@string/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:background="@drawable/et_selector"
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:textColorHint="@color/gray"
        android:padding="@dimen/lay_10"
        android:maxLines="1"
        android:layout_height="@dimen/lay_40" />
    <ImageView
        android:id="@+id/submit"
        android:padding="@dimen/lay_20"
        android:src="@drawable/reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
