<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ggstore.com.view.MyNestedScrollView
        android:id="@+id/activity_register_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/activity_register_agree_detail"
        android:layout_marginLeft="@dimen/lay_20"
        android:layout_marginRight="@dimen/lay_20"
        android:layout_marginBottom="@dimen/lay_1"
        android:fadingEdge="vertical"
        android:fadingEdgeLength="@dimen/lay_50"
        android:requiresFadingEdge="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/register_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/lay_20"
                android:layout_marginBottom="@dimen/lay_20"
                android:text="@string/register_title"
                android:textColor="@color/bg"
                android:textSize="@dimen/font_18" />

            <TextView
                android:id="@+id/activity_register_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ggstore.com.view.MyNestedScrollView>

    <TextView
        android:id="@+id/activity_register_agree_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom"
        android:paddingLeft="@dimen/lay_20"
        android:paddingRight="@dimen/lay_20"
        android:visibility="gone"
        android:paddingBottom="@dimen/lay_5"
        android:text="@string/register_bottom"
        android:textColor="@color/bg" />

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/bg"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/activity_register_disagree"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/lay_50"
            android:layout_marginLeft="@dimen/lay_20"
            android:layout_weight="1"
            android:drawableLeft="@drawable/left_nav"
            android:drawablePadding="@dimen/lay_10"
            android:gravity="center_vertical"
            android:text="@string/disagree"
            android:textColor="@color/white"
            android:textSize="@dimen/font_25" />

        <TextView
            android:id="@+id/activity_register_agree"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/lay_50"
            android:layout_marginRight="@dimen/lay_20"
            android:visibility="gone"
            android:layout_weight="1"
            android:drawableRight="@drawable/right_nav"
            android:drawablePadding="@dimen/lay_10"
            android:gravity="center_vertical|end"
            android:text="@string/agree"
            android:textColor="@color/white"
            android:textSize="@dimen/font_25" />
    </LinearLayout>
</RelativeLayout>